# idiotDiaryV2

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  example.env  pyproject.toml  start.sh  stop.sh
config_dist/: config.yml
idiotDiary/: Dockerfile  __main__.py
idiotDiary/api/: __init__.py  main.py
idiotDiary/api/di/: auth.py  config.py
idiotDiary/api/routes/: birthdays.py
idiotDiary/api/utils/: exceptions.py
idiotDiary/bot/di/: bot.py  dp.py  (+1 more)
idiotDiary/mq/: broker.py  run.py
idiotDiary/mq_faststream/: __main__.py  run.py
idiotDiary/mq_taskiq/: broker.py  main.py  tasks.py
idiotDiaryV2/apps/: routes.py
idiotDiaryV2/common/: filters.py  jinja.py  middlewares.py
idiotDiaryV2/config/: env.py  storage.py
idiotDiary_old/: entrypoint.sh  requirements.txt
idiotDiary_old/common/: FSM.py  whens.py
idiotDiary_old/config/: enums.py  formats.py  ui_config.py
idiotDiary_old/http_server/: webhook.py
idiotDiary_old/migrations/: env.py
migrations/: env.py
migrations/versions/: c3266f5e9b90_.py  c42e79645612_.py
nginx/: default.conf
telegram_bot/: Dockerfile  entrypoint.sh  requirements.txt  start.py
telegram_bot/common/: FSM.py  base_keyboard.py  buttons.py  context_message.py  filters.py  handlers.py  jinja.py  keyboards.py  middlewares.py  mixins.py  storage.py  types.py  whens.py
telegram_bot/config/: bot.py  env.py  logger.py  on_events.py  router.py  scheduler.py  settings.py  startup_shutdown.py  types.py  ui_config.py
telegram_bot/http_server/: app.py  dependencies.py  middleware.py  setup.py  webhook.py
telegram_bot/migrations/: env.py
youtube/: app.py  download.py  entrypoint.sh  requirements.txt  settings.py
(+470 files in other folders)
