[tool.poetry]
name = "idiotDiary"
version = "3.0.0"
description = ""
authors = ["rSlow <redmaxx4@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.103.2"
uvicorn = "^0.30.6"
aiogram = "^3.12.0"
aiogram-dialog = "^2.1.0"
alembic = "^1.13.2"
apscheduler = "^3.10.4"
asyncpg = "^0.29.0"
babel = "^2.16.0"
jinja2 = "^3.1.4"
redis = "^5.0.8"
sqlalchemy = "^2.0.32"
adaptix = "^3.0.0b7"
dishka = "^1.3.0"
colorlog = "^6.8.2"
pyjwt = "^2.9.0"
dateutils = "^0.6.12"
passlib = "^1.7.4"
asgi-monitor = "^0.5.0"
pyyaml = "^6.0.2"
sqlalchemy-utils = "^0.41.2"
taskiq = {extras = ["reload"], version = "^0.11.7"}
taskiq-aio-pika = "^0.4.1"
taskiq-redis = "^1.0.2"
faststream = "^0.5.28"
selenium = "^4.25.0"
pypdf2 = "^3.0.1"
b = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
